# flux-mcp

./: .env.example  .gitignore  COMMIT.md  README.md  pyproject.toml
src/flux_mcp/: __init__.py  cli.py  config.py  generator.py  server.py
